--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=1280, maximum-scale=1.0">
 
-<title>Неофициальный русский перевод «Mahoutsukai no Yoru: Witch on the Holy Night»</title>
+<title>Неофициальный русскоязычный перевод «Mahoutsukai no Yoru: Witch on the Holy Night»</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
