--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<link rel="shortcut icon" href="{Favicon}">
+<link href="https://raw.githubusercontent.com/INSANEATTIC/WITCHWEB/main/favicon.ico">
 
 <meta name="viewport" content="width=1280, maximum-scale=1.0">
 
